cmake_minimum_required(VERSION 3.4.1)

set(CORONA_ROOT         "${CMAKE_SOURCE_DIR}/../../..")
get_filename_component(CORONA_ROOT "${CORONA_ROOT}" ABSOLUTE)

set(LibNdkGenSharedPath "${CMAKE_CURRENT_BINARY_DIR}/generated_src")

set(LibCoronaCMakePath	"${CORONA_ROOT}/platform/android/ndk")
set(LibLuaSoPath        "${CORONA_ROOT}/external/lua-5.1.3/src")
set(LibJnlua51Path      "${CORONA_ROOT}/external/JNLua/src/main/c")
set(LibAlMixerPath      "${CORONA_ROOT}/external/ALmixer")
set(LibB2SeparatorPath  "${CORONA_ROOT}/external/b2Separator-cpp")
set(LibBox2DPath        "${CORONA_ROOT}/external/Box2D/Box2D")
set(LibBox2DIncPath     "${CORONA_ROOT}/external/Box2D")
set(LibJpegPath         "${CORONA_ROOT}/external/libjpeg")
set(LibPngPath          "${CORONA_ROOT}/external/lpng1256")
set(LibSmootPolygonPath "${CORONA_ROOT}/external/smoothpolygon")
set(LibSqlitePath       "${CORONA_ROOT}/external/sqlite3")
set(LuaFSPath           "${CORONA_ROOT}/external/luafilesystem")
set(LuaLpegPath         "${CORONA_ROOT}/external/lpeg")
set(LuaSocketPath       "${CORONA_ROOT}/external/luasocket")
set(TachyonPath         "${CORONA_ROOT}/librtt/Renderer")
set(LibPluginsPath      "${CORONA_ROOT}/plugins/shared")
set(LibPluginAdsPath    "${CORONA_ROOT}/plugins/ads")
set(LibPlAnalyticsPath  "${CORONA_ROOT}/plugins/analytics")
set(LibPlLicensingPath  "${CORONA_ROOT}/plugins/licensing/android")
set(LibPlGameNetwPath   "${CORONA_ROOT}/plugins/gameNetwork/android")
set(LibSharedPath       "${CORONA_ROOT}/platform/shared")
set(LibOpenALPath       "${CORONA_ROOT}/external/openal-soft_apportable/jni/OpenAL")
set(LibMpg123Path       "${CORONA_ROOT}/external/mpg123-1.13.1/src/libmpg123")
set(LibVorbisPath       "${CORONA_ROOT}/external/tremor/Tremor")

include(AndroidNdkModules)
android_ndk_import_module_cpufeatures()
include(CMakeGenLua.cmake)

add_subdirectory(${LibLuaSoPath}/.. ${CMAKE_CURRENT_BINARY_DIR}/liblua_build/)
add_subdirectory(${LibJnlua51Path} ${CMAKE_CURRENT_BINARY_DIR}/libjnlua5.1_build/)
add_subdirectory(${LibOpenALPath} ${CMAKE_CURRENT_BINARY_DIR}/libopenal_build/)
add_subdirectory(${LibMpg123Path} ${CMAKE_CURRENT_BINARY_DIR}/libmpg123_build/)
add_subdirectory(${LibAlMixerPath} ${CMAKE_CURRENT_BINARY_DIR}/libalmixer_build/)
add_subdirectory(${LibCoronaCMakePath} ${CMAKE_CURRENT_BINARY_DIR}/libcorona_build/)
add_subdirectory(${LibPluginAdsPath} ${CMAKE_CURRENT_BINARY_DIR}/libads_build/)
add_subdirectory(${LibPlAnalyticsPath} ${CMAKE_CURRENT_BINARY_DIR}/libanalytics_build/)
add_subdirectory(${LibPlLicensingPath} ${CMAKE_CURRENT_BINARY_DIR}/liblicensing_build/)
add_subdirectory(${LibPlGameNetwPath} ${CMAKE_CURRENT_BINARY_DIR}/libgameNetwork_build/)